# NetEase_Cloud_Music_Web

./: .gitignore  IMPLEMENTATION_PLAN.md  LOGIN_PERSISTENCE_FIX_SUMMARY.md  PipeWire自动重启系统 - 完成报告.md  README.md  README_系统托盘功能.md  check_dependencies.py  diagnose_login.py  main.py  pack.py  pipewire_manager.py  pipewire_manager_integration.py  profile_manager.py  pyproject.toml  requirements.txt  run.py  test_final_integration.py  test_logging.py  test_login_fix.py  test_pipewire_manager.py  test_pipewire_settings.py  test_profile_manager.py  test_single_tray_integration.py  test_tray.py  test_tray_manager.py  test_tray_manager_results.md  test_tray_simple.py  tray_manager.py
config/: logging_config.py
doc/: CODE_CLEANUP_SUMMARY.md  PipeWire启动问题修复跟踪文档.md  PipeWire自动重启功能完成报告.md  PipeWire配置说明.md  用户关闭行为偏好功能实现总结.md  系统托盘开发计划.md
gui/: __init__.py  close_confirm_dialog.py  main_window.py  settings_dialog.py
logger/: __init__.py  formatters.py  handlers.py
packaging/: README_GUI.md  start_packaging_gui.sh
packaging/scripts/: build_appimage.sh  check_dependencies.sh  packaging_gui.py
packaging_01/: build_script.sh  build_spec.py  netease_music.spec  venv_requirements.txt
packaging_02/: build_script.sh  build_spec.py  netease_music.spec  requirements_full.txt
packaging_02/build_utils/: dependency_manager.py
packaging_03/: README_AppImage.md  appimage_builder.py  build_script.sh
packaging_03/build_utils/: appdir_creator.py  dependency_analyzer.py  library_manager.py
packaging_04/scripts/: build_appimage.sh  clean_temp_files.sh  packaging_gui.py  quick_build.sh  (+1 more)
(+1 files in other folders)
